--- a/Taskly_Infrastructure/HTMLPages/ChangePassword/ChangePassword.html
+++ b/Taskly_Infrastructure/HTMLPages/ChangePassword/ChangePassword.html
@@ -3,16 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <title>Change Password</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 100%;
+            max-width: 500px;
+            margin: 50px auto;
+            background: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            padding: 30px;
+        }
+        .title {
+            font-size: 24px;
+            font-weight: bold;
+            color: #004ab9;
+        }
+        .button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 12px 25px;
+            font-size: 16px;
+            color: white;
+            background-color: #0052CC;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background 0.3s ease-in-out;
+        }
+        .button:hover {
+            background-color: #004ab9;
+        }
+        .footer {
+            font-size: 14px;
+            color: #777;
+            margin-top: 20px;
+        }
+    </style>
 </head>
-<body style="margin: 0; padding: 0; font-family: Arial;">
-    <div style="padding: 20px;">
-        <p style="height:50%;display: block; text-align:center; font-size: 23px; margin: 0;">Перейти до зміни паролю</p>
-        <a href="http://localhost:5173/authentication/change-password/[CHANGE_PASSWORD_KEY]"
-           style="height: 50%; width:200px; display: block;margin:auto; text-align:center; text-decoration: none; background-color: #0052CC; color: white; border-radius: 3px; padding: 10px 20px; font-size: 16px; cursor: pointer;"
-           onmouseover="this.style.backgroundColor='#004ab9';"
-           onmouseout="this.style.backgroundColor='#0052CC';">
-            Змінити пароль
-        </a>
-    </div>
+<body>
+<div class="container">
+    <p class="title">Перейти до зміни паролю</p>
+    <a href="http://localhost:5173/authentication/change-password/[CHANGE_PASSWORD_KEY]" class="button">
+        Змінити пароль
+    </a>
+    <p class="footer">Якщо ви не запитували зміну пароля, просто проігноруйте цей лист.</p>
+</div>
 </body>
 </html>
