--- a/Taskly_Infrastructure/HTMLPages/VerificateEmail/VerificateEmail.html
+++ b/Taskly_Infrastructure/HTMLPages/VerificateEmail/VerificateEmail.html
@@ -2,12 +2,51 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Verificate Email</title>
+    <title>Verify Your Email</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 100%;
+            max-width: 500px;
+            margin: 50px auto;
+            background: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            padding: 30px;
+        }
+        .title {
+            font-size: 24px;
+            font-weight: bold;
+            color: #004ab9;
+        }
+        .code {
+            font-size: 30px;
+            font-weight: bold;
+            color: #333;
+            background: #e8f0ff;
+            padding: 10px 20px;
+            display: inline-block;
+            border-radius: 8px;
+            margin-top: 20px;
+        }
+        .footer {
+            font-size: 14px;
+            color: #777;
+            margin-top: 20px;
+        }
+    </style>
 </head>
-<body style="margin: 0; padding: 0; font-family: Arial;">
-    <div style="padding: 20px;">
-        <p style="height: 50%; display: block; text-align: center; font-size: 23px; margin: 0; color: #004ab9">Verification code</p>
-        <p style="height:50%;display: block; text-align:center; font-size: 23px; margin: 0;">[VERIFICATION_CODE]</p>
-    </div>
+<body>
+<div class="container">
+    <p class="title">Verification Code</p>
+    <p class="code">[VERIFICATION_CODE]</p>
+    <p class="footer">If you did not request this code, please ignore this email.</p>
+</div>
 </body>
 </html>
