add new design to ChangePassword.html

--- a/Taskly_Infrastructure/HTMLPages/ChangePassword/ChangePassword.html
+++ b/Taskly_Infrastructure/HTMLPages/ChangePassword/ChangePassword.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Change Password</title>
+    <title>Change Your Password</title>
     <style>
         body {
             margin: 0;
@@ -26,19 +26,19 @@
             color: #004ab9;
         }
         .button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 12px 25px;
-            font-size: 16px;
-            color: white;
-            background-color: #0052CC;
-            text-decoration: none;
-            border-radius: 5px;
+            font-size: 18px;
             font-weight: bold;
+            color: #333;
+            background: #e8f0ff;
+            padding: 12px 25px;
+            display: inline-block;
+            border-radius: 8px;
+            margin-top: 20px;
+            text-decoration: none;
             transition: background 0.3s ease-in-out;
         }
         .button:hover {
-            background-color: #004ab9;
+            background-color: #d0e0ff;
         }
         .footer {
             font-size: 14px;
@@ -49,11 +49,11 @@
 </head>
 <body>
 <div class="container">
-    <p class="title">Перейти до зміни паролю</p>
+    <p class="title">Reset Your Password</p>
     <a href="http://localhost:5173/authentication/change-password/[CHANGE_PASSWORD_KEY]" class="button">
-        Змінити пароль
+        Change Password
     </a>
-    <p class="footer">Якщо ви не запитували зміну пароля, просто проігноруйте цей лист.</p>
+    <p class="footer">If you did not request a password change, please ignore this email.</p>
 </div>
 </body>
 </html>
