--- a/taskly-app/index.html
+++ b/taskly-app/index.html
@@ -1,9 +1,11 @@
+
+
 <!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="../taskly-app/src/assets/logo_rm.png" />
+  <link rel="icon" type="image/png" href="../src/assets/logo_rm.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Taskly</title>
 </head>
